# PleaseRetry

./: .gitignore  CMakeLists.txt  CNAME  LEGAL.txt  PleaseRetry.slnx  README.md  builder.bat  builder.sh  current-dv.md  exports.md  index.html  simple_file.md
EmuDLL/: CMakeLists.txt  main.cpp
PleaseRetry/: ISteamGameCoordinator001Lite.h  PleaseRetry.vcxproj  PleaseRetry.vcxproj.filters  Plugin.cpp
Steamworks/: CMakeLists.txt  README.md
Steamworks/include/: isteamapplist.h  isteamapplist001.h  isteamapps.h  isteamapps001.h  isteamapps002.h  isteamapps003.h  isteamapps004.h  isteamapps005.h  isteamapps006.h  isteamapps007.h  isteamapps008.h  isteamapps009.h  isteamappticket.h  isteamappticket001.h  isteamcontroller.h  isteamcontroller000.h  isteamcontroller003.h  isteamcontroller004.h  isteamcontroller005.h  isteamcontroller006.h  isteamcontroller007.h  isteamcontroller008.h  steamclientpublic.h  steamcontrollerpublic.h  steamtypes.h  steamuniverse.h
docs/: documentation-viewer.md  interfaces.md  introduction.md
docs/prsteamworks/: introduction.md  isteamapplist.md  isteamapps.md  isteamappticket.md  isteamcontroller.md
doom/: doom.html
